Fix summary number alignments

--- a/src/resources/src/scss/workflow.scss
+++ b/src/resources/src/scss/workflow.scss
@@ -198,6 +198,7 @@
 .workflow-reviews-stat-number {
     font-weight: 700;
     font-size: 30px;
+    padding: 1rem;
 }
 
 .workflow-reviews-stat-heading {
